...
"action_mark_as_read" = "Mark as read";
"action_message" = "Message";
"action_minimize" = "Minimise";
"action_next" = "Next";
"action_no" = "No";
"action_not_now" = "Not now";
"action_ok" = "OK";
"action_open_context_menu" = "Open context menu";
"action_open_settings" = "Settings";
"action_open_with" = "Open with";
"action_pin" = "Pin";
"action_quick_reply" = "Quick reply";
"action_quote" = "Quote";
...
"screen_change_server_navigation_title_login" = "Sign in";
"screen_change_server_navigation_title_register" = "Create account";
"screen_change_server_subtitle" = "What is the address of your server?";
"screen_change_server_textfield_footer_login" = "If your account is provided by your company or a community, then change the account provider (example: companyname.com).";
"screen_change_server_textfield_footer_register" = "Create an account on matrix.org for free. If you want to create an account with a different provider, then change it accordingly (example: communityname.org).";
"screen_change_server_textfield_header" = "Account provider";
"screen_change_server_textfield_placeholder" = "example.com";
"screen_change_server_title" = "Select your server";
"screen_change_server_title_login" = "Enter your account provider";
"screen_change_server_title_register" = "Choose an account provider";
"screen_chat_backup_key_backup_action_disable" = "Delete key storage";
"screen_chat_backup_key_backup_action_enable" = "Turn on backup";
"screen_chat_backup_key_backup_description" = "This will allow you to view your chat history on any new devices and is required for backup of chats and digital identity. %1$@.";
...
