...
struct LoginScreenBindings {
    /// The username input by the user.
    var username = ""
    /// The password input by the user.
    var password = ""
    /// Information describing the currently displayed alert.
    var alertInfo: AlertInfo<LoginScreenErrorType>?
}

enum LoginScreenViewAction {
    /// Parse the username to detect if a homeserver is included.
    case parseUsername
    /// Continue using the input username and password.
...
