...
        case qrCodeLoginScreen
        
        /// The screen used to choose a server
        case serverSelectionScreen
        
        /// The screen to login with a password.
        case loginScreen
        
        /// The screen to report an error.
        case bugReportFlow
        /// The screen to toggle feature flags.
        case developerOptions
        
...
